--- a/app/RideShareOZ/app/src/main/res/layout/activity_driver_view_ride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_driver_view_ride.xml
@@ -182,7 +182,8 @@
         android:layout_row="10"
         android:layout_column="0"
         android:layout_gravity="center"
-        android:layout_columnSpan="6" />
+        android:layout_columnSpan="6"
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
