--- a/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
@@ -10,7 +10,7 @@
              android:gravity="center_vertical|center|center_horizontal">
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
@@ -23,8 +23,9 @@
             android:text="@string/nameText"
             android:id="@+id/NameText"
             android:layout_column="0"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"/>
+            android:layout_gravity="left|center"
+            android:layout_marginBottom="10dp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,11 +34,12 @@
             android:id="@+id/ShowName"
             android:layout_column="1"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            />
     </TableRow>
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
@@ -50,8 +52,9 @@
             android:text="@string/phoneText"
             android:id="@+id/PhoneText"
             android:layout_column="0"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"/>
+            android:layout_gravity="left|center"
+            android:layout_marginBottom="10dp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -60,11 +63,12 @@
             android:id="@+id/ShowPhone"
             android:layout_column="1"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            />
     </TableRow>
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
@@ -77,8 +81,9 @@
             android:text="@string/emailText"
             android:id="@+id/EmailText"
             android:layout_column="0"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"/>
+            android:layout_gravity="left|center"
+            android:layout_marginBottom="10dp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -87,11 +92,12 @@
             android:id="@+id/ShowEmail"
             android:layout_column="1"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            />
     </TableRow>
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
@@ -104,8 +110,9 @@
             android:text="@string/creditText"
             android:id="@+id/textView2"
             android:layout_column="0"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"/>
+            android:layout_gravity="left|center"
+            android:layout_marginBottom="10dp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -114,11 +121,12 @@
             android:id="@+id/ShowCredit"
             android:layout_column="1"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            />
     </TableRow>
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
@@ -131,8 +139,9 @@
             android:text="@string/departureText"
             android:id="@+id/departureText"
             android:layout_column="0"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"/>
+            android:layout_gravity="left|center"
+            android:layout_marginBottom="10dp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -141,35 +150,37 @@
             android:id="@+id/ShowDeparture"
             android:layout_column="1"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            />
 
     </TableRow>
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal">
 
         <Button
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
             android:text="@string/acceptText"
             android:id="@+id/acceptButton"
             android:layout_column="0"
             android:textSize="12sp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
-            android:gravity="center_vertical|center_horizontal"/>
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_weight="1"/>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
             android:text="@string/rejectText"
             android:id="@+id/rejectButton"
             android:layout_column="1"
             android:textSize="12sp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
-            />
+            android:layout_weight="1"/>
     </TableRow>
 </TableLayout>
