--- a/app/RideShareOZ/app/src/main/res/layout/activity_driver_view_ride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_driver_view_ride.xml
@@ -21,7 +21,7 @@
         android:id="@+id/startLabel"
         android:layout_row="0"
         android:layout_column="0"
-        android:layout_gravity="fill_horizontal|center_horizontal"
+        android:layout_gravity="top|center_horizontal|fill"
         android:layout_marginTop="10dp"/>
 
     <TextView
@@ -42,7 +42,7 @@
         android:id="@+id/endPointLabel"
         android:layout_row="1"
         android:layout_column="0"
-        android:layout_gravity="fill_horizontal|center_horizontal"
+        android:layout_gravity="top|center_horizontal|fill"
         android:layout_marginTop="10dp"/>
 
     <TextView
