--- a/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
@@ -1,147 +1,277 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout android:id="@+id/Lay01"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                tools:context="com.swen900014.orange.rideshareoz.OfferRide">
+<ScrollView android:id="@+id/Lay01" xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.swen900014.orange.rideshareoz.OfferRide" >
 
-    <TableLayout
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp">
+    <RelativeLayout android:layout_width="fill_parent"
+                    android:layout_height="fill_parent" >
 
-        <!-- Start -->
+        <TableLayout
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp">
 
-        <TableRow>
-            <TextView
-                android:id="@+id/startPointText"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="@string/StartPoint"
-                android:textSize="20dp"
-                android:textStyle="bold"/>
+            <!-- Start -->
 
-            <AutoCompleteTextView
-                android:id="@+id/Start"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="30dp"/>
+            <TableRow>
+                <TextView
+                    android:id="@+id/startPointText"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/StartPoint"
+                    android:textSize="20dp"
+                    android:textStyle="bold"/>
 
-            <CheckBox
-                android:id="@+id/current1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="-20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="5dp"
-                android:checked="false"
-                android:gravity="center"
-                android:text="@string/_Current"/>
-        </TableRow>
+                <AutoCompleteTextView
+                    android:id="@+id/Start"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="30dp"/>
+
+                <CheckBox
+                    android:id="@+id/current1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="-20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="5dp"
+                    android:checked="false"
+                    android:gravity="center"
+                    android:text="@string/_Current"/>
+            </TableRow>
 
 
-        <TableRow android:layout_marginLeft="10dp">
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/">
 
-            <TextView
-                android:id="@+id/endPointText"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/endPoint"
-                android:textSize="20dp"
-                android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="City:"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:layout_column="0"/>
 
-            <AutoCompleteTextView
-                android:id="@+id/End"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="-5dp"
-                android:layout_marginRight="40dp"/>
+                <EditText
+                    android:id="@+id/srartCityEdit"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"/>
+            </TableRow>
 
-            <CheckBox
-                android:id="@+id/current2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:layout_marginLeft="-30dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="5dp"
-                android:checked="false"
-                android:gravity="center"
-                android:text="@string/_Current"/>
-        </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <TableRow>
-            <TextView
-                android:id="@+id/startTimeText"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="@string/startTime"
-                android:textSize="20sp"
-                android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Suberb:"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:layout_column="0"/>
 
-            <EditText
-                android:id="@+id/Date"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"/>
-        </TableRow>
+                <EditText
+                    android:id="@+id/startSuberbEdit"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"/>
+            </TableRow>
 
-        <TableRow>
-            <TextView
-                android:id="@+id/endTimeText"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="@string/arrivalTime"
-                android:textSize="20sp"
-                android:textStyle="bold"/>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/StartTime"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"/>
-        </TableRow>
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Street:"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:layout_column="0"/>
 
-        <TableRow>
-            <TextView
-                android:id="@+id/txtSeatNo"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="@string/seats"
-                android:textSize="20sp"
-                android:textStyle="bold"/>
+                <EditText
+                    android:id="@+id/startStreetEdit"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"/>
+            </TableRow>
 
-            <EditText
-                android:id="@+id/SeatNo"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"/>
-        </TableRow>
-    </TableLayout>
+            <TableRow android:layout_marginLeft="10dp"
+                      android:layout_marginTop="15dp">
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="300dp"
-        android:background="#FFCC66"
-        android:gravity="center"
-        android:onClick="offerRide"
-        android:text="@string/_Submit"
-        android:textColor="#FFFFFF"/>
+                <TextView
+                    android:id="@+id/endPointText"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/endPoint"
+                    android:textSize="20dp"
+                    android:textStyle="bold"/>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="220dp"
-        android:layout_marginTop="300dp"
-        android:background="#FFCC66"
-        android:gravity="center"
-        android:text="@string/_Reset"
-        android:textColor="#FFFFFF"/>
+                <AutoCompleteTextView
+                    android:id="@+id/End"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="-5dp"
+                    android:layout_marginRight="40dp"/>
 
-</RelativeLayout>
+                <CheckBox
+                    android:id="@+id/current2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="2"
+                    android:layout_marginLeft="-30dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="5dp"
+                    android:checked="false"
+                    android:gravity="center"
+                    android:text="@string/_Current"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="City:"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:layout_column="0"/>
+
+                <EditText
+                    android:id="@+id/endCityEdit"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Suberb:"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:layout_column="0"/>
+
+                <EditText
+                    android:id="@+id/endSuberbEdit"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Street:"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:layout_column="0"/>
+
+                <EditText
+                    android:id="@+id/endStreetEdit"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"/>
+            </TableRow>
+
+            <TableRow android:layout_marginTop="15dp">
+                <TextView
+                    android:id="@+id/startTimeText"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/startTime"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+
+                <EditText
+                    android:id="@+id/Date"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"/>
+            </TableRow>
+
+            <TableRow>
+                <TextView
+                    android:id="@+id/endTimeText"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/arrivalTime"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+
+                <EditText
+                    android:id="@+id/StartTime"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"/>
+            </TableRow>
+
+            <TableRow>
+                <TextView
+                    android:id="@+id/txtSeatNo"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/seats"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+
+                <EditText
+                    android:id="@+id/SeatNo"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"/>
+            </TableRow>
+        </TableLayout>
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="550dp"
+            android:background="#FFCC66"
+            android:gravity="center"
+            android:onClick="offerRide"
+            android:text="@string/_Submit"
+            android:textColor="#FFFFFF"/>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="220dp"
+            android:layout_marginTop="550dp"
+            android:background="#FFCC66"
+            android:gravity="center"
+            android:text="@string/_Reset"
+            android:textColor="#FFFFFF"/>
+
+    </RelativeLayout>
+</ScrollView>
