--- a/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
@@ -144,7 +144,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="City:"
+                    android:text="State:"
                     android:textSize="15dp"
                     android:textStyle="bold"
                     android:layout_column="0"/>
