--- a/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
@@ -21,7 +21,7 @@
             android:id="@+id/startLabel"
             android:layout_row="0"
             android:layout_column="0"
-            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_gravity="fill_horizontal|top|center_horizontal"
             android:layout_marginTop="10dp"/>
 
         <TextView
@@ -42,7 +42,7 @@
             android:id="@+id/endPointLabelPass"
             android:layout_row="1"
             android:layout_column="0"
-            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_gravity="fill_horizontal|top|center_horizontal"
             android:layout_marginTop="10dp"/>
 
         <TextView
@@ -64,7 +64,7 @@
             android:id="@+id/timeLabel"
             android:layout_row="2"
             android:layout_column="0"
-            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_gravity="fill_horizontal|top|center_horizontal"
             android:layout_marginTop="10dp"/>
 
         <TextView
@@ -86,7 +86,7 @@
             android:id="@+id/driverLabelPassView"
             android:layout_row="4"
             android:layout_column="0"
-            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_gravity="fill_horizontal|top|center_horizontal"
             android:layout_marginTop="10dp"/>
 
         <TextView
@@ -97,7 +97,7 @@
             android:id="@+id/textView"
             android:layout_row="3"
             android:layout_column="0"
-            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_gravity="fill_horizontal|top|center_horizontal"
             android:layout_marginTop="10dp"/>
 
         <TextView
@@ -119,7 +119,7 @@
             android:id="@+id/textView3"
             android:layout_row="5"
             android:layout_column="0"
-            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_gravity="fill_horizontal|top|center_horizontal"
             android:layout_marginTop="10dp"/>
 
         <TextView
@@ -139,10 +139,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="5"
-            android:layout_column="5"
+            android:layout_column="1"
             android:layout_gravity="fill_horizontal|bottom|center_horizontal"
             android:layout_marginTop="10dp"
-            />
+            android:layout_columnSpan="5"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -162,7 +162,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnSpan="5"
-            android:layout_gravity="fill_horizontal|center">
+            android:layout_gravity="fill_horizontal|bottom|center">
 
         </TableLayout>
 
@@ -199,36 +199,69 @@
             android:layout_marginTop="10dp"
             android:layout_columnSpan="5"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/state"
+            android:id="@+id/textView10"
+            android:layout_row="10"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
+
         <EditText
             android:ems="10"
             android:id="@+id/cityEditPass"
             android:inputType="textPostalAddress"
             android:layout_row="10"
-            android:layout_column="5"
+            android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
             android:layout_marginTop="10dp"
             android:layout_columnSpan="5"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/suburb"
+            android:id="@+id/textView11"
+            android:layout_row="11"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
 
         <EditText
             android:ems="10"
             android:id="@+id/suberbEditPass"
             android:inputType="textPostalAddress"
             android:layout_row="11"
-            android:layout_column="5"
+            android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
             android:layout_marginTop="10dp"
             android:layout_columnSpan="5"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/street"
+            android:id="@+id/textView13"
+            android:layout_row="12"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
+
         <EditText
             android:ems="10"
             android:id="@+id/streetEditPass"
             android:inputType="textPostalAddress"
             android:layout_row="12"
-            android:layout_column="5"
+            android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
@@ -244,7 +277,8 @@
             android:layout_row="13"
             android:layout_column="0"
             android:layout_gravity="fill_horizontal|center_horizontal"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:visibility="invisible"/>
 
         <EditText
             android:ems="10"
@@ -256,7 +290,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
             android:layout_marginTop="10dp"
-            android:layout_columnSpan="5"/>
+            android:layout_columnSpan="5"
+            android:visibility="invisible"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -268,7 +303,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_columnSpan="6"
             android:text="@string/joinButton"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="15dp"/>
 
     </GridLayout>
 </ScrollView>
