--- a/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
@@ -188,7 +188,8 @@
             android:layout_row="9"
             android:layout_column="0"
             android:layout_gravity="fill_horizontal|center_horizontal"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:visibility="gone"/>
 
         <AutoCompleteTextView
             android:layout_width="wrap_content"
@@ -198,7 +199,8 @@
             android:layout_column="1"
             android:layout_gravity="fill_horizontal"
             android:layout_marginTop="10dp"
-            android:layout_columnSpan="5"/>
+            android:layout_columnSpan="5"
+            android:visibility="gone"/>
 
         <TextView
             android:layout_width="wrap_content"
