--- a/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
@@ -30,8 +30,7 @@
             android:layout_columnSpan="6"
             android:layout_row="1"
             android:layout_gravity="fill_horizontal"
-            android:textSize="12dp"
-            android:inputType="textAutoComplete"/>
+            android:inputType="textAutoComplete|textMultiLine"/>
 
         <CheckBox
             android:id="@+id/current1"
@@ -64,7 +63,6 @@
             android:layout_column="0"
             android:layout_columnSpan="6"
             android:layout_gravity="fill_horizontal"
-            android:textSize="12dp"
             android:inputType="textMultiLine"/>
 
         <CheckBox
