--- a/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
@@ -26,11 +26,11 @@
             android:id="@+id/Start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_columnSpan="6"
-            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_columnSpan="5"
+            android:layout_row="0"
             android:layout_gravity="fill_horizontal"
-            android:inputType="textAutoComplete|textMultiLine"/>
+            android:inputType="textAutoComplete|textPostalAddress|textMultiLine"/>
 
         <CheckBox
             android:id="@+id/current1"
@@ -40,7 +40,7 @@
             android:gravity="center"
             android:text="@string/_Current"
             android:layout_column="1"
-            android:layout_row="0"
+            android:layout_row="1"
             />
 
         <TextView
@@ -59,11 +59,11 @@
             android:id="@+id/End"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="3"
-            android:layout_column="0"
-            android:layout_columnSpan="6"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:layout_columnSpan="5"
             android:layout_gravity="fill_horizontal"
-            android:inputType="textMultiLine"/>
+            android:inputType="textAutoComplete|textPostalAddress|textMultiLine"/>
 
         <CheckBox
             android:id="@+id/current2"
@@ -74,7 +74,7 @@
             android:checked="false"
             android:gravity="center"
             android:text="@string/_Current"
-            android:layout_row="2"/>
+            android:layout_row="3"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -151,7 +151,8 @@
             android:layout_column="1"
             android:layout_row="5"
             android:layout_gravity="fill_horizontal"
-            android:layout_columnSpan="5"/>
+            android:layout_columnSpan="5"
+            android:layout_marginTop="10dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -168,12 +169,9 @@
             android:layout_width="101dp"
             android:layout_height="30dp"
             android:id="@+id/spinner"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignRight="@+id/txtSeatNo"
-            android:layout_column="2"
+            android:layout_column="3"
             android:layout_row="7"
-            android:layout_rowSpan="2" />
+            android:layout_gravity="bottom"/>
 
         <GridLayout
             android:layout_column="0"
