--- a/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
@@ -36,7 +36,7 @@
             android:layout_column="1"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="10dp"
-            />
+            android:inputType="textMultiLine"/>
     </TableRow>
 
     <TableRow
@@ -65,7 +65,7 @@
             android:layout_column="1"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="10dp"
-            />
+            android:inputType="textMultiLine"/>
     </TableRow>
 
     <TableRow
@@ -94,7 +94,7 @@
             android:layout_column="1"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="10dp"
-            />
+            android:inputType="textMultiLine"/>
     </TableRow>
 
     <TableRow
@@ -123,7 +123,7 @@
             android:layout_column="1"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="10dp"
-            />
+            android:inputType="textMultiLine"/>
     </TableRow>
 
     <TableRow
@@ -152,15 +152,15 @@
             android:layout_column="1"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="10dp"
-            />
+            android:inputType="textMultiLine"/>
 
     </TableRow>
 
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal">
-
+    <GridLayout android:layout_width="match_parent"
+                android:columnCount="3"
+                android:rowCount="1"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp">
         <Button
             android:layout_width="80dp"
             android:layout_height="40dp"
@@ -168,20 +168,19 @@
             android:id="@+id/acceptButton"
             android:layout_column="0"
             android:textSize="12sp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="10dp"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_weight="1"/>
+            android:layout_margin="10dp"
+            android:layout_marginLeft="20dp"/>
 
         <Button
             android:layout_width="80dp"
             android:layout_height="40dp"
             android:text="@string/rejectText"
             android:id="@+id/rejectButton"
-            android:layout_column="1"
+            android:layout_column="2"
             android:textSize="12sp"
-            android:layout_gravity="center_horizontal"
+            android:layout_row="0"
             android:layout_margin="10dp"
-            android:layout_weight="1"/>
-    </TableRow>
+            android:layout_marginRight="20dp"/>
+    </GridLayout>
 </TableLayout>
