--- a/app/RideShareOZ/app/src/main/res/layout/auto_place_list.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/auto_place_list.xml
@@ -8,8 +8,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
         android:id="@+id/description"
-        android:inputType="textPostalAddress|textMultiLine"
         android:onClick="onClick"/>
+
+    <TextView android:layout_width="fill_parent"
+              android:layout_height="1dp"
+              android:background="#000000" />
 </LinearLayout>
